# jq-rust

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.sh  deep_dive.sh  detailed_benchmark.sh  jq_bench.rs  large_benchmark.sh
src/: error.rs  intern.rs  lib.rs  main.rs  module.rs  regex_helper.rs  testing.rs
src/builtins/: format.rs  mod.rs
src/jv/: array.rs  mod.rs  number.rs  object.rs  parse.rs  print.rs  string.rs  value.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/vm/: context.rs  interpreter.rs  mod.rs
tests/: jq_compat.rs
