[package]
name = "jqr"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of jq - a lightweight and flexible command-line JSON processor"
license = "MIT"
repository = "https://github.com/allxiao/jqr"
keywords = ["json", "jq", "cli", "filter", "query"]
categories = ["command-line-utilities", "parsing"]
readme = "README.md"
authors = ["allxiao"]

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
regex = "1.10"
fancy-regex = "0.14"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
pretty_assertions = "1.4"
criterion = "0.5"

[[bench]]
name = "jq_bench"
harness = false

[[bin]]
name = "jqr"
path = "src/main.rs"

[[bin]]
name = "run-tests"
path = "src/bin/run_tests.rs"

[lib]
name = "jqr"
path = "src/lib.rs"
